create bid
