# docs/swagger.yaml
@@ -36,6 +36,8 @@ definitions:
         type: integer
       lot_id:
         type: integer
+      price:
+        type: integer
       updated_at:
         type: string
     type: object
@@ -93,8 +95,10 @@ definitions:
   v1.authUser:
     properties:
       email:
+        example: test@example.com
         type: string
       password:
+        example: "12345678"
         type: string
     type: object
   v1.listBidResponse:
@@ -163,10 +167,13 @@ definitions:
   v1.registerUser:
     properties:
       email:
+        example: test@example.com
         type: string
       name:
+        example: Test User
         type: string
       password:
+        example: "12345678"
         type: string
     type: object
   v1.showUserResponse:
@@ -209,22 +216,6 @@ paths:
       summary: Login user
       tags:
       - sessions
-  /bids:
-    get:
-      consumes:
-      - application/json
-      description: Show all bid list
-      operationId: bidList
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/v1.listBidResponse'
-      summary: Show bid list
-      tags:
-      - bids
   /lots:
     get:
       consumes:
@@ -238,6 +229,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/v1.listLotResponse'
+        "500":
+          description: Internal Server Error
       summary: Show lot list
       tags:
       - lots
@@ -348,6 +341,57 @@ paths:
       summary: Update lot
       tags:
       - lots
+  /lots/{id}/bids:
+    get:
+      consumes:
+      - application/json
+      description: Show all bid list
+      operationId: bidList
+      parameters:
+      - description: Lot ID
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/v1.listBidResponse'
+        "500":
+          description: Internal Server Error
+      summary: Show bid list
+      tags:
+      - bids
+    post:
+      consumes:
+      - application/json
+      description: create bid
+      operationId: create-bid
+      parameters:
+      - description: Lot ID
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+        "422":
+          description: Unprocessable Entity
+        "500":
+          description: Internal Server Error
+      summary: Create bid
+      tags:
+      - bids
   /register:
     post:
       consumes:
